--- a/src/daalgavar.css
+++ b/src/daalgavar.css
@@ -28,7 +28,7 @@
     border:none;
     position:relative;
     font-size: 10px;
-    border-radius: 14px;
+    border-radius: px;
 }
 .style-from button p{
     color:rgb(255, 255, 255);
@@ -66,7 +66,6 @@
 }
 .input-button input:first-child{
     background-color: rgb(145, 145, 145);
-    border-radius: 10px;
     
     border:0.1px solid white;
     width:350px;
